Prevent text overlap when post has no tags

--- a/src/main/content/_assets/css/blog.scss
+++ b/src/main/content/_assets/css/blog.scss
@@ -391,6 +391,9 @@
 .blog_post_author_data_container {
     margin-bottom: 20px;
     padding-left: 15px;
+    overflow:hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 
     @media (max-width: 767.98px) {
         display: none;
